formatting with lhs2tex

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,46 @@ images/system1.svg
 abstract.txt~
 
 .#content.tex
+
+#soosim.tex#
+
+#soosim.tex#
+
+.#soosim.tex
+
+#soosim.tex#
+
+#soosim.tex#
+
+auto/footer.el
+
+footer.tex~
+
+header.tex~
+
+input.tex
+
+styled.aux
+
+styled.bbl
+
+styled.blg
+
+styled.fdb_latexmk
+
+styled.log
+
+styled.out
+
+styled.pdf
+
+processed.tex
+
+styled.ptb
+
+styled.tex
+
+#soosim.tex#
+
+auto/header.el
+
